--- a/railway/Base.lproj/Main.storyboard
+++ b/railway/Base.lproj/Main.storyboard
@@ -178,9 +178,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="6iN-cd-48L" kind="relationship" relationship="viewControllers" id="3ce-MK-MXc"/>
                         <segue destination="eFK-xy-eug" kind="relationship" relationship="viewControllers" id="C6m-b0-dNq"/>
-                        <segue destination="P9T-ey-tZu" kind="relationship" relationship="viewControllers" id="43d-1s-Gbi"/>
+                        <segue destination="6iN-cd-48L" kind="relationship" relationship="viewControllers" id="2PV-id-t9Y"/>
+                        <segue destination="P9T-ey-tZu" kind="relationship" relationship="viewControllers" id="YCg-zy-Uqw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Af7-5P-rub" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -203,11 +203,6 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="590"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vQ0-lb-vFF" customClass="InputLocationView" customModule="railway" customModuleProvider="target">
-                                <rect key="frame" x="16" y="28" width="343" height="142"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -231,13 +226,48 @@
                     <view key="view" contentMode="scaleToFill" id="ddR-en-lc4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="center" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dm4-4B-XRr">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="s8G-eN-NR6">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="101"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s8G-eN-NR6" id="MPf-io-2lJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Railway Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tR-DS-YDh">
+                                                    <rect key="frame" x="13" y="13" width="127.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wn1-j4-MJd">
+                                                    <rect key="frame" x="13" y="59" width="55" height="30"/>
+                                                    <state key="normal" title="Remove"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wn1-j4-MJd" firstAttribute="top" secondItem="7tR-DS-YDh" secondAttribute="bottom" constant="25" id="5Px-zH-daz"/>
+                                                <constraint firstItem="wn1-j4-MJd" firstAttribute="leading" secondItem="MPf-io-2lJ" secondAttribute="leadingMargin" constant="5" id="IFv-FQ-A54"/>
+                                                <constraint firstItem="7tR-DS-YDh" firstAttribute="leading" secondItem="MPf-io-2lJ" secondAttribute="leadingMargin" constant="5" id="OQU-7c-7ty"/>
+                                                <constraint firstItem="7tR-DS-YDh" firstAttribute="top" secondItem="MPf-io-2lJ" secondAttribute="topMargin" constant="5" id="VB1-fO-2p4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Crossings" image="trainIcon" selectedImage="trainIcon" id="Bga-Tz-Zjy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kUp-cR-xMg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1718" y="139"/>
+            <point key="canvasLocation" x="1717.5" y="138.5"/>
         </scene>
     </scenes>
     <resources>
